fix 3 loading error in gallery on mobile device / increased to 50 per page and delete viewall btn

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -27,16 +27,21 @@ margin-top: unset;
 
 .rj-gallery-card {
   width: 100%;
-  /* max-width: 360px; */
-  margin: 0 auto;
+  height: 500px; /* adjust this value to set the desired card height */
+  display: flex;
+  flex-direction: column;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: inset 0px 0px 1px 1px #fff9;
 }
 
+
 .rj-gallery-card .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: #fff5;
-  background-image: linear-gradient(132deg, transparent , rgba(240, 240, 240, 0.5));
+  background-image: linear-gradient(132deg, transparent, rgba(240, 240, 240, 0.5));
 }
 
 .rj-gallery-card .card-header {
@@ -56,11 +61,14 @@ margin-top: unset;
 }
 
 .rj-gallery-card .image-container {
- position: relative;
-  height: 0;
-  padding-bottom: 56.25%; /* Adjust this value according to your desired aspect ratio (16:9 in this case) */
+  position: relative;
+  min-height: 280px;
   overflow: hidden;
+  flex: 1;
+  display: flex;
+  align-items: center;
 }
+
 
 .rj-gallery-card .img-wrapper {
  
@@ -79,7 +87,7 @@ margin-top: unset;
   height: 100%;
   object-fit: contain;
   border: 1px solid #0006;
-  
+  background-color: #0008;
   transition: opacity 1s;
 }
 
